# spotify-backup

./: .dockerignore  .envrc  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  backups.json  deny.toml  fly.toml  index.html  jsconfig.json  logo.xcf  package-lock.json  package.json  scripts.js  serverless.yml  spotify-backup.private-key.pem  styles.css  tsconfig.json  types.d.ts  wrangler.toml
.github/workflows/: docker.yml  main.yml  rust.yml
assets/: logo.xcf
crates/dioxus-ansi/: Cargo.toml
crates/dioxus-ansi/src/: lib.rs
crates/entity/src/: account.rs  github_auth.rs  lib.rs  spotify_auth.rs  user_session.rs
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_tables.rs
database/: Dockerfile  fly.toml
entity/: Cargo.toml
entity/src/: account.rs  github_auth.rs  prelude.rs  spotify_auth.rs  user_session.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_tables.rs
scripts/: deploy.sh  release.sh
src/: auth.rs  backup.rs  backup.ts  bin-bootstrap.rs  bin-setup.rs  csv.ts  database.rs  env.ts  environment.rs  home.tsx  index.ts  lib.rs  main.rs  manifest.json  middleware.rs  output.rs  pages.rs  render.tsx  router.rs  routes.rs  spotify.ts  templates.rs  uptime-kuma.ts  util.rs  web.rs
src/database/: id.rs
src/middleware/: catch_panic.rs  trace.rs
src/pages/: account.rs  dashboard.rs  error.css  error.rs  home.rs  home.tsx  login.rs  wet-run.tsx
src/pages/error/: 404.tsx  405.tsx  500.tsx  error.tsx
src/render/: html.tsx  response.ts
src/router/: api.rs  authentication.rs  error.rs  index.rs  login.rs  middleware.rs  session.rs
src/router/authentication/: github.rs  spotify.rs
src/router/middleware/: catch_panic.rs  redirect.rs  request_metadata.rs  server_information.rs  trace.rs
src/routes/: api.rs  error.rs  index.rs
src/templates/: error.rs
static/: manifest.json  styles.css
templates/: 404.html  index.html
templates/error/: 404.html  500-error.html  500-panic.html  500.html  error.html
templates/include/: head.html
