[package]
edition = "2021"
name    = "spotify-backup"
version = "0.0.0-prerelease"

# [profile.dev.package."*"]
# opt-level = 2

[profile.release]
codegen-units   = 1
debug           = 1
lto             = "thin"
overflow-checks = true

[workspace]
members  = ["entity", "migration"]
resolver = "2"

[workspace.dependencies]
sea-orm = { version = "0.11.2", default-features = false, features = ["debug-print", "macros", "postgres-array", "runtime-tokio-rustls", "sqlx-postgres", "with-time", "with-uuid"] }

[dependencies]
# Web
axum       = { version = "0.6.15", features = ["macros", "original-uri", "tracing"] }
axum-extra = { version = "0.7.3", features = ["cookie"] }
dioxus     = { version = "0.3.2", default-features = false, features = ["html", "macro"] }
dioxus-ssr = "0.3.0"
tower      = { version = "0.4.13" }
tower-http = { version = "0.4.0", features = ["full"] }

# Email
lettre = { version = "0.10.4", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }

# Github
octocrab = { version = "0.19.0", default-features = false, features = ["rustls", "stream"] }

# Spotify
rspotify = { version = "0.11.6", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }

# Database
entity    = { path = "entity" }
migration = { path = "migration" }
sea-orm   = { workspace = true }

# Utility
const_format = { version = "0.2.30", features = ["rust_1_64"] }
futures      = "0.3.28"
git-version  = "0.3.5"
once_cell    = "1.16.0"
serde        = { version = "1.0.159", features = ["derive"] }
time         = { version = "0.3.20", features = ["serde"] }
tokio        = { version = "1.27.0", features = ["full", "tracing"] }

# Debugging
color-eyre         = "0.6.2"
sentry             = { version = "0.30.0", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tower", "tower-http", "tracing"] }
tracing            = "0.1.37"
tracing-error      = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
