[package]
edition = "2021"
name    = "spotify-backup"
version = "0.0.0-prerelease"

# [profile.dev.package."*"]
# opt-level = 2

[profile.release]
codegen-units   = 1
debug           = 1
lto             = "thin"
overflow-checks = true

[features]
# Enable live js for auto-reloading css and js in development
live_js = []

[workspace]
members  = ["crates/*"]
resolver = "2"

[patch.crates-io]
# https://github.com/DioxusLabs/dioxus/issues/979
dioxus            = { git = "https://github.com/DioxusLabs/dioxus", rev = "c9f9b8b0fa71a8fabc6a216a8a7771a1f686d936" }
dioxus-core       = { git = "https://github.com/DioxusLabs/dioxus", rev = "c9f9b8b0fa71a8fabc6a216a8a7771a1f686d936" }
dioxus-core-macro = { git = "https://github.com/DioxusLabs/dioxus", rev = "c9f9b8b0fa71a8fabc6a216a8a7771a1f686d936" }
dioxus-rsx        = { git = "https://github.com/DioxusLabs/dioxus", rev = "c9f9b8b0fa71a8fabc6a216a8a7771a1f686d936" }
dioxus-ssr        = { git = "https://github.com/DioxusLabs/dioxus", rev = "c9f9b8b0fa71a8fabc6a216a8a7771a1f686d936" }

[workspace.dependencies]
sea-orm = { version = "0.11.2", default-features = false, features = ["debug-print", "macros", "postgres-array", "runtime-tokio-rustls", "sqlx-postgres", "with-time", "with-uuid"] }

[dependencies]
# Web
axum        = { version = "0.6.15", features = ["headers", "macros", "original-uri", "tracing"] }
axum-extra  = { version = "0.7.3", features = ["cookie"] }
dioxus      = { version = "0.3.2", default-features = false, features = ["html", "macro"] }
dioxus-ansi = { path = "crates/dioxus-ansi" }
dioxus-ssr  = "0.3.0"
tower       = { version = "0.4.13" }
tower-http  = { version = "0.4.0", features = ["full"] }

# Email
lettre = { version = "0.10.4", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }

# Github
jsonwebtoken = "8.3.0"
monostate    = "0.1.6"
octocrab     = { version = "0.19.0", default-features = false, features = ["rustls", "stream"] }
reqwest      = { version = "0.11.16", default-features = false, features = ["brotli", "deflate", "gzip", "rustls-tls"] }
serde_json   = "1.0.96"

# Spotify
rspotify = { version = "0.11.6", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }

# Database
entity    = { path = "crates/entity" }
migration = { path = "crates/migration" }
sea-orm   = { workspace = true }

# Utility
const_format = { version = "0.2.30", features = ["rust_1_64"] }
futures      = "0.3.28"
git-version  = "0.3.5"
serde        = { version = "1.0.160", features = ["derive"] }
time         = { version = "0.3.20", features = ["serde"] }
tokio        = { version = "1.27.0", features = ["full", "tracing"] }

# Debugging
color-eyre         = "0.6.2"
sentry             = { version = "0.30.0", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tower", "tower-http", "tracing"] }
tracing            = "0.1.37"
tracing-error      = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
