[package]
edition = "2021"
name    = "spotify-backup"
version = "0.0.0-prerelease"

[profile.release]
codegen-units   = 1
debug           = 1
lto             = "thin"
overflow-checks = true

[features]
# Enable live js for auto-reloading css and js in development
live_js = []

[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.dependencies]
dioxus            = { version = "0.4.0", default-features = false, features = ["html", "macro"] }
sea-orm           = { version = "0.12.6", default-features = false, features = ["debug-print", "macros", "postgres-array", "runtime-tokio-rustls", "sqlx-postgres", "with-time", "with-uuid"] }
sea-orm-migration = { version = "0.12.6", default-features = false, features = ["cli", "runtime-tokio-rustls", "sqlx-postgres"] }
tokio             = { version = "1.27.0", features = ["macros", "rt"] }

[dependencies]
# Web
axum        = { version = "0.6.15", features = ["headers", "macros", "original-uri", "tracing"] }
axum-extra  = { version = "0.8.0", features = ["cookie"] }
dioxus      = { workspace = true }
dioxus-ansi = { path = "crates/dioxus-ansi" }
dioxus-ssr  = "0.4.0"
tower       = { version = "0.4.13" }
tower-http  = { version = "0.4.0", features = ["full"] }

# Email
lettre = { version = "0.10.4", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }

# Github
jsonwebtoken = "9.1.0"
octocrab     = { version = "0.32.0", default-features = false, features = ["rustls", "stream"] }
reqwest      = { version = "0.11.22", default-features = false, features = ["brotli", "deflate", "gzip", "rustls-tls"] }
serde_json   = "1.0.96"

# Spotify
chrono   = "0.4"                                                                                                 # For compatibility with rspofity
rspotify = { version = "0.12.0", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }

# OAuth
secrecy = "0.8.0"

# Database
entity    = { path = "crates/entity" }
migration = { path = "crates/migration" }
sea-orm   = { workspace = true }

# Utility
const_format = { version = "0.2.30", features = ["rust_1_64"] }
futures      = "0.3.28"
git-version  = "0.3.5"
once_cell    = "1.17.1"
serde        = { version = "1.0.160", features = ["derive"] }
time         = { version = "0.3.20", features = ["serde"] }
tokio        = { workspace = true, features = ["full", "tracing"] }

# Debugging
color-eyre         = "0.6.2"
color-spantrace    = "0.2.0"
sentry             = { version = "0.31.8", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tower", "tower-http", "tracing"] }
tracing            = "0.1.37"
tracing-error      = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
