[package]
edition = "2021"
name    = "migration"
publish = false
version = "0.0.0"

[dependencies]
sea-orm-migration = { version = "0.11.2", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres", "cli"] }
tokio             = { version = "1.27.0", features = ["macros", "rt"] }
